Fixed expected result not showing when creating report and small css improvements

--- a/client/src/sass/components/_portrait-testcase.scss
+++ b/client/src/sass/components/_portrait-testcase.scss
@@ -50,7 +50,7 @@
     padding: 1.5rem 2rem;
     &-container {
       &--description {
-        max-height: 14rem;
+        // max-height: 14rem;
         overflow: hidden;
         color: #000000;
         font-size: 1.4rem;
@@ -58,6 +58,10 @@
         line-height: 1.8rem;
 
         margin-bottom: 5rem;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 8; /* number of lines to show */
+        -webkit-box-orient: vertical;
       }
       &--button {
         position: absolute;
