--- a/client/src/sass/components/_report-details.scss
+++ b/client/src/sass/components/_report-details.scss
@@ -3,6 +3,7 @@
   max-width: 120.8rem;
   background-color: #ffffff;
   box-shadow: 2px 2px 0 0 rgba(221, 218, 239, 0.5);
+  word-break: break-word;
   &-row {
     display: flex;
     flex-direction: row;
